# semanticOS

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
python/: initialize.py  main.py  modify.py
python/data/: embeddings_location.pkl  names_location.pkl
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: embeddings.bincode  endings.txt  file_names.bincode  meta_data.bincode  names_location.pkl  resources.txt
src-tauri/functions/: Cargo.toml
src-tauri/functions/src/: files.rs  lib.rs  model.rs
src-tauri/python /: query.py  test.ipynb
src-tauri/src/: main.rs
