workspace = { members = ["functions"] }
[package]
name = "semanticos"
version = "0.0.0"
description = "Semantic OS search"
authors = ["Ryan Nguyen"]
license = "MIT"
repository = "https://github.com/xpbowler/semanticOS"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
instant-distance = "0.5.0"
anyhow = "1.0"
rust-bert = "0.21.0"
bincode = "1.3.3"
kiddo = "3.0.0"
reqwest = "0.11"
thiserror = "1.0.56"



functions = {path = "functions"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
