workspace = { members = ["functions"] }
[package]
name = "semantic-os"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "shell-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
instant-distance = "0.5.0"
anyhow = "1.0"
bincode = "1.3.3"
kiddo = "3.0.0"
reqwest = "0.11"
functions = {path = "functions"}
ort = { version = "1.15", features = ["load-dynamic"] }
rust_tokenizers = "8.1.0"
ndarray = "0.15.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
