workspace = { members = ["functions"] }

[package]
name = "semantic_os"
version = "0.0.0"
description = "Fast semantic file searching"
authors = ["Ryan Nguyen"]
license = "MIT"
repository = "https://github.com/xpbowler/semanticos"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "shell-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
instant-distance = "0.5.0"
bincode = "1.3.3"
kiddo = "3.0.0"
reqwest = "0.11"
ort = { version = "1.15", features = ["load-dynamic"] }
rust_tokenizers = "8.1.0"

functions = {path = "functions"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
