[package]
name = "functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
serde-pickle = "0.6.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }